--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -27,6 +27,8 @@
     <script src="js/bootstrap.bundle.min.js" autostart="false"></script>
     <script src="_content/Blazor.Bootstrap/blazor.bootstrap.js"></script>
     <script src="js/focusElement.js"></script>
+    <script src="js/site.js"></script>
+
 
 </body>
 
